--- a/NSGA-II.ipynb
+++ b/NSGA-II.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Fast Elite Non-dominated Sorting Genetic Algorithm (NSGA-II)\n",
     "\n",
-    "We implement the NSGA-II here using pure Python, for the purpose of demonstrate the implementation and the procedure.\n"
+    "We implement the NSGA-II here using pure Python, for the purpose of demonstrating the implementation and the procedure.\n"
    ]
   },
   {
