--- a/NSGA-II.ipynb
+++ b/NSGA-II.ipynb
@@ -114,9 +114,9 @@
    "id": "3d79fe34-35e3-4228-9718-1669762ccde3",
    "metadata": {},
    "source": [
-    "## Fast non-dominated sort (key algorithm)\n",
+    "## Fast non-dominated sorting (key algorithm)\n",
     "\n",
-    "The following is the key part of the entire algorithm. Here, a population of solutions (`P`) will be ranked due to the solutions non-domination within the population. The function returns a dictionary `F` where the key are integers, each indicating the front where ranked 1 means a solution dominates all other solutions ranked above 1. After the function is run, each solution will have assigned a value of its `rank` member (1 being the highest/best) and an `n` member indicating the number of solutions that dominates it. The values in the returned dictionary are solution objects. Comments in the function without a dot are from the original paper. The values in F are integers (indexes) and the converted to objects at the end of the function."
+    "The following is the key part of the entire algorithm for nondominated sorting. Here, a population of solutions (`P`) will be ranked due to the solutions non-domination within the population. The function returns a dictionary `F1` where the key are integers, each indicating the front where ranked 1 means a solution dominates all other solutions ranked above 1. After the function is run, each solution will have assigned a value of its `rank` member (1 being the highest/best) and an `n` member indicating the number of solutions that dominates it. The values in the returned dictionary are solution objects. Comments in the function without a dot are from the original paper. The values in F are integers (indexes) and the converted to objects at the end of the function."
    ]
   },
   {
