--- a/NSGA-II.ipynb
+++ b/NSGA-II.ipynb
@@ -1279,7 +1279,7 @@
     "\n",
     "We have shown how to implement the non-dominated sorting algorithm (NSGA) and the binary coded genetic algorithm, and demonstrated how they can be used to solve a few example of multiobjective optimization problems. The visualizations of these application clearly suggest the effectiveness of both algorithms, where we can see how solutions in each generation move \"across\" the solution space from their random positions in the space toward the Pareto front that is optimal. \n",
     "\n",
-    "The above code are stored in a separate Python file called nsga2.py and is ready to use. Here is a example of how to use it using the example problem called SCH (as used in the Doodle section):\n",
+    "The code for NSGA-II (along with the code for the binary coded GA) is stored in a separate Python module called nsga2.py and is ready to use. Here is a example of how to use it using the example problem called SCH (as used in the Doodle section):\n",
     "\n",
     "```python\n",
     "from nsga2 import *\n",
